--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+body,
+p,
+h1,
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #E5E5E5;
   font-family: system-ui, sans-serif;
@@ -17,9 +25,76 @@ svg {
   height: 1.5rem;
 }
 
-p,
-h1,
-h2 {
-  margin: 0;
-  padding: 0;
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.bg-primary-1 {
+  background-color: #051367;
+}
+
+.bg-primary-2 {
+  background-color: #D82148;
+}
+
+.bg-primary-3 {
+  background-color: #6EBF8B;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.justify-text {
+  text-align: justify;
+}
+
+.header {
+  display: flex;
+  height: 10vh;
+  align-items: center;
+  justify-content: center;
+  background-color: #533E85;
+  box-shadow: 0px 4px 6px 0px #00000026;
+
+  &__title {
+    font-size: 1rem;
+    text-transform: uppercase;
+  }
+}
+
+.main-content {
+  display: grid;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.card {
+  padding: 1.5rem;
+  border-radius: 4px;
+
+  &__image {
+    margin-bottom: 1.5rem;
+    border: 1px solid #F6F6F6;
+    border-radius: 4px;
+  }
+
+  &__title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  &__bio > *:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+}
+
+.social {
+  display: flex;
+  align-items: center;
+
+  &__icon {
+    margin-right: .7rem;
+  }
 }
