--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,33 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body,
 p,
 h1,
 h2 {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 body {
   background-color: #E5E5E5;
   font-family: system-ui, sans-serif;
-  color: #F6F6F6;
-}
+  color: #F6F6F6; }
 
 img {
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 svg {
   width: 1.5rem;
-  height: 1.5rem;
-}
+  height: 1.5rem; }
 
 .mb-1 {
-  margin-bottom: 1rem;
-}
-
-.bg-primary-1 {
-  background-color: #051367;
-}
-
-.bg-primary-2 {
-  background-color: #D82148;
-}
-
-.bg-primary-3 {
-  background-color: #6EBF8B;
-}
+  margin-bottom: 1rem; }
 
 .bold-text {
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .justify-text {
-  text-align: justify;
-}
+  text-align: justify; }
 
 .header {
   display: flex;
@@ -55,43 +35,71 @@ svg {
   align-items: center;
   justify-content: center;
   background-color: #533E85;
-  box-shadow: 0px 4px 6px 0px #00000026;
-}
-.header__title {
-  font-size: 1rem;
-  text-transform: uppercase;
-}
+  box-shadow: 0px 4px 6px 0px #00000026; }
+  .header__title {
+    font-size: 1rem;
+    text-transform: uppercase; }
 
 .main-content {
   display: grid;
   gap: 1rem;
-  padding: 1rem;
-}
+  grid-template-columns: 1fr;
+  padding: 1rem; }
+  @media (min-width: 62rem) {
+    .main-content {
+      min-height: 90vh;
+      gap: 3rem;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      padding: 3rem; } }
 
 .card {
+  display: flex;
+  flex-direction: column;
   padding: 1.5rem;
-  border-radius: 4px;
-}
-.card__image {
-  margin-bottom: 1.5rem;
-  border: 1px solid #F6F6F6;
-  border-radius: 4px;
-}
-.card__title {
-  margin-bottom: 2rem;
-  text-align: center;
-  font-size: 2rem;
-}
-.card__bio > *:not(:last-child) {
-  margin-bottom: 1rem;
-}
+  border-radius: 4px; }
+  .card__image {
+    margin-bottom: 1.5rem;
+    border: 1px solid #F6F6F6;
+    border-radius: 4px; }
+  .card__title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 2rem; }
+  .card__bio > *:not(:last-child) {
+    margin-bottom: 1rem; }
+  @media (min-width: 62rem) {
+    .card__image {
+      max-height: 27rem; }
+    .card__title {
+      text-align: left; } }
+
+.card-bio {
+  background-color: #051367; }
+  @media (min-width: 62rem) {
+    .card-bio {
+      grid-column: 3 / 4;
+      grid-row: 1 / 3; } }
+
+.card-about {
+  background-color: #D82148; }
+  @media (min-width: 62rem) {
+    .card-about {
+      grid-column: 1 / 3;
+      justify-content: flex-end; } }
+
+.card-social {
+  background-color: #6EBF8B; }
+  @media (min-width: 62rem) {
+    .card-social {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+      justify-content: flex-end; } }
 
 .social {
   display: flex;
-  align-items: center;
-}
-.social__icon {
-  margin-right: 0.7rem;
-}
+  align-items: center; }
+  .social__icon {
+    margin-right: .7rem; }
 
 /*# sourceMappingURL=styles.css.map */
