--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
+$breakpoint-medium: 62rem;
+
 * {
   box-sizing: border-box;
 }
@@ -29,18 +31,6 @@ svg {
   margin-bottom: 1rem;
 }
 
-.bg-primary-1 {
-  background-color: #051367;
-}
-
-.bg-primary-2 {
-  background-color: #D82148;
-}
-
-.bg-primary-3 {
-  background-color: #6EBF8B;
-}
-
 .bold-text {
   font-weight: bold;
 }
@@ -66,10 +56,21 @@ svg {
 .main-content {
   display: grid;
   gap: 1rem;
+  grid-template-columns: 1fr;
   padding: 1rem;
+
+  @media (min-width: $breakpoint-medium) {
+    min-height: 100vh - 10vh;
+    gap: 3rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 3rem;
+  }
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   padding: 1.5rem;
   border-radius: 4px;
 
@@ -87,6 +88,44 @@ svg {
 
   &__bio > *:not(:last-child) {
     margin-bottom: 1rem;
+  }
+
+  @media (min-width: $breakpoint-medium) {
+    &__image {
+      max-height: 27rem;
+    }
+
+    &__title {
+      text-align: left;
+    }
+  }
+}
+
+.card-bio {
+  background-color: #051367;
+
+  @media (min-width: $breakpoint-medium) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+}
+
+.card-about {
+  background-color: #D82148;
+
+  @media (min-width: $breakpoint-medium) {
+    grid-column: 1 / 3;
+    justify-content: flex-end;
+  }
+}
+
+.card-social {
+  background-color: #6EBF8B;
+
+  @media (min-width: $breakpoint-medium) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    justify-content: flex-end;
   }
 }
 
